--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -69,7 +69,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MathParser.org-mXparser, Version=4.3.3.0, Culture=neutral, PublicKeyToken=0fbab7add73ed6e2, processorArchitecture=MSIL">
-      <HintPath>..\packages\MathParser.org-mXparser.4.3.3\lib\net461\MathParser.org-mXparser.dll</HintPath>
+      <HintPath>packages\MathParser.org-mXparser.4.3.3\lib\net461\MathParser.org-mXparser.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
